Mon Jan 19 12:51:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>
        
        * THANKS
          Added Bill Rizzi <rizi at softserv.com> for his contribution to the following automated tests:
            Bug_3500_Regression_Test
            Bug_3541_Regression_Test
                  
Mon Jan 19 12:28:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3500_Regression_Test.cpp:
          Added in order to run automated tests for Bugzilla #3500
          
        * tests/Bug_3541_Regression_Test.cpp:
          Added in order to run automated tests for Bugzilla #3541
        
        * tests/tests.mpc:
          Added Bug_3500_Regression_Test and Bug_3541_Regression_Test
          
        * tests/run_test.lst:
          Added Bug_3500_Regression_Test and Bug_3541_Regression_Test

Mon Jan 19 09:14:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_Log_Msg_Attributes.inl:
          Initialize all members with default values

        * ace/Log_Msg.cpp:
          Just delete the casted ACE_Log_Msg pointer, no need todo
          another cast

Mon Jan 19 07:49:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/INET_Addr.cpp:
        * ace/Log_Record.inl:
          Use ACE_HTONL macro

        * ace/INET_Addr.inl:
          Use ACE_NTOHS macro

Fri Jan 16 22:32:38 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_Asynch_Stream.{h cpp}: Remove the handle_ member; use
          the handle_ inherited from ACE_Asynch_Operation.

        * tests/SSL/SSL_Asynch_Stream_Test.cpp: Register the acceptor with the
          reactor so we hear about incoming connects. Other minor mods to
          help see what's going on in the log. Hopefully will resolve
          Bugzilla #3164.

Fri Jan 16 07:26:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Token_Invariants.cpp:
        * ace/Token_Manager.cpp:
          Added missing include
