@@ -37,7 +37,7 @@ run_main (int, ACE_TCHAR *argv[])
   ACE_Event event0(0,             // int manual_reset = 0
                    0,             // int initial_state = 0
                    USYNC_PROCESS, // int type = USYNC_THREAD
-				   eventName);    // const ACE_TCHAR *name = 0
+                   eventName);    // const ACE_TCHAR *name = 0
 
   lastError = ACE_OS::last_error();
   
@@ -55,7 +55,7 @@ run_main (int, ACE_TCHAR *argv[])
     ACE_Event event1(0,              // int manual_reset = 0
                      0,              // int initial_state = 0
                      USYNC_PROCESS,  // int type = USYNC_THREAD
-				     eventName);     // const ACE_TCHAR *name = 0
+                     eventName);     // const ACE_TCHAR *name = 0
 
     lastError = ACE_OS::last_error();
   
@@ -63,11 +63,11 @@ run_main (int, ACE_TCHAR *argv[])
 
     if ((eventHandle == ACE_INVALID_HANDLE) ||
         (lastError != ERROR_ALREADY_EXISTS))
-	{
+    {
       ret = -1;
 
       ACE_ERROR ((LM_ERROR, ACE_TEXT ("ACE_Event(%s) failed - handle %d lastError %d\n"), eventName, eventHandle, lastError));
-	}
+    }
   }
 
   // ACE_OS::sema_init
@@ -76,7 +76,7 @@ run_main (int, ACE_TCHAR *argv[])
 
   ACE_Semaphore semaphore0(1,               // int count = 1
                            USYNC_PROCESS,   // int type = USYNC_THREAD
-				           semaphoreName);  // const ACE_TCHAR *name = 0
+                           semaphoreName);  // const ACE_TCHAR *name = 0
 
   lastError = ACE_OS::last_error();
   
@@ -93,7 +93,7 @@ run_main (int, ACE_TCHAR *argv[])
   {
     ACE_Semaphore semaphore1(1,               // int count = 1
                              USYNC_PROCESS,   // int type = USYNC_THREAD
-				             semaphoreName);  // const ACE_TCHAR *name = 0
+                             semaphoreName);  // const ACE_TCHAR *name = 0
 
     lastError = ACE_OS::last_error();
   
@@ -101,11 +101,11 @@ run_main (int, ACE_TCHAR *argv[])
 
     if ((semaphoreLock == ACE_INVALID_HANDLE) ||
         (lastError != ERROR_ALREADY_EXISTS))
-	{
+    {
       ret = -1;
 
       ACE_ERROR ((LM_ERROR, ACE_TEXT ("ACE_Semaphore(%s) failed - lock %d lastError %d\n"), semaphoreName, semaphoreLock, lastError));
-	}
+    }
   }
 
   // ACE_OS::mutex_init()
@@ -113,7 +113,7 @@ run_main (int, ACE_TCHAR *argv[])
   const ACE_TCHAR *mutexName = "Bug3541_Mutex";
 
   ACE_Mutex mutex0(USYNC_PROCESS,  // int type = USYNC_THREAD
-				   mutexName);     // const ACE_TCHAR *name = 0
+                   mutexName);     // const ACE_TCHAR *name = 0
 
   lastError = ACE_OS::last_error();
   
@@ -129,7 +129,7 @@ run_main (int, ACE_TCHAR *argv[])
   else
   {
     ACE_Mutex mutex1(USYNC_PROCESS,  // int type = USYNC_THREAD
-				     mutexName);     // const ACE_TCHAR *name = 0
+                     mutexName);     // const ACE_TCHAR *name = 0
 
     lastError = ACE_OS::last_error();
   
@@ -137,11 +137,11 @@ run_main (int, ACE_TCHAR *argv[])
 
     if ((mutexLock.proc_mutex_ == ACE_INVALID_HANDLE) ||
         (lastError != ERROR_ALREADY_EXISTS))
-	{
+    {
       ret = -1;
 
       ACE_ERROR ((LM_ERROR, ACE_TEXT ("ACE_Mutex(%s) failed - lock %d lastError %d\n"), mutexName, mutexLock, lastError));
-	}
+    }
   }
 
  #endif
