@@ -1,3 +1,9 @@
+Mon Jan 19 14:55:19 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Bug_3500_Regression_Test.cpp:
+        * tests/Bug_3541_Regression_Test.cpp:
+          Solved fuzz errors
+
 Mon Jan 19 12:51:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>
         
         * THANKS
